--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/styled-components": "^5.1.14",
     "gh-pages": "^3.2.3",
+    "pokenode-ts": "^1.13.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
