Changed homepage in package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://rllyy97.github.io/poke-assist",
+  "homepage": "http://www.pokeassist.xyz",
   "name": "poke-assist",
   "version": "0.2.5",
   "private": true,
