--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
-    "@mui/icons-material": "^5.0.1",
-    "@mui/material": "^5.0.2",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.10",
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -22,8 +22,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-lazy-load": "^3.1.14",
+    "react-query": "^3.39.2",
     "react-redux": "^8.0.2",
     "react-scripts": "4.0.3",
+    "react-window": "^1.8.7",
     "styled-components": "^5.3.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
