--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "version": "0.3.1",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "yarn build",
+    "start": "vite",
+    "build": "tsc && vite build",
+    "test": "vitest",
+    "preview": "vite preview",
+    "predeploy": "vite build",
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
@@ -25,6 +25,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/styled-components": "^5.1.14",
+    "@vitejs/plugin-react": "^4.2.1",
     "gh-pages": "^3.2.3",
     "pokenode-ts": "^1.13.1",
     "react": "^17.0.2",
@@ -32,10 +33,12 @@
     "react-lazy-load": "^3.1.14",
     "react-query": "^3.39.2",
     "react-redux": "^8.0.2",
-    "react-scripts": "4.0.3",
     "react-window": "^1.8.7",
     "styled-components": "^5.3.1",
     "typescript": "^4.1.2",
+    "vite": "^5.0.10",
+    "vite-plugin-svgr": "^4.2.0",
+    "vite-tsconfig-paths": "^4.2.2",
     "web-vitals": "^1.0.1"
   },
   "eslintConfig": {
@@ -55,5 +58,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "vitest": "^1.1.0"
   }
 }
