--- a/package.json
+++ b/package.json
@@ -17,16 +17,6 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.10",
     "@reduxjs/toolkit": "^1.8.3",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/styled-components": "^5.1.14",
-    "@vitejs/plugin-react": "^4.2.1",
-    "gh-pages": "^3.2.3",
     "pokenode-ts": "^1.13.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -34,12 +24,7 @@
     "react-query": "^3.39.2",
     "react-redux": "^8.0.2",
     "react-window": "^1.8.7",
-    "styled-components": "^5.3.1",
-    "typescript": "^4.1.2",
-    "vite": "^5.0.10",
-    "vite-plugin-svgr": "^4.2.0",
-    "vite-tsconfig-paths": "^4.2.2",
-    "web-vitals": "^1.0.1"
+    "styled-components": "^5.3.1"
   },
   "eslintConfig": {
     "extends": [
@@ -60,6 +45,20 @@
     ]
   },
   "devDependencies": {
-    "vitest": "^1.1.0"
+		"@vitejs/plugin-react": "^4.2.1",
+		"@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^22.15.30",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/styled-components": "^5.1.14",
+		"gh-pages": "^3.2.3",
+		"typescript": "^4.1.2",
+    "vite": "^6.3.5",
+    "vitest": "^1.1.0",
+    "vite-plugin-svgr": "^4.2.0",
+    "vite-tsconfig-paths": "^4.2.2"
   }
 }
